# goit-ds-hw-02

./: connect.py  create_db.py  fakeData.py  pyproject.toml  query_select.py  query_to_db.py  seed.py  sql_query.py  sqlite_project.db  tables.sql
src/: connect.py
src/modules/: fakeData.py  sql_query.py
